--- a/index.html
+++ b/index.html
@@ -7,8 +7,43 @@
 		<script type="text/javascript" src="vector/main.js"></script>
 		<script type="text/javascript" src="src/main.js"></script>
 		<title>Vector Editor</title>
+		<style type="text/css">
+			body {
+				margin: 0;
+				padding: 0;
+			}
+			#table {
+				position: fixed;
+				width: 100%;
+				height: 100%;
+				border: none;
+			}
+			#canvas {
+				width: 100%;
+				height: 100%;
+			}
+			#left, #right {
+				width: 240px;
+				height: 100%;
+				background-color: #FFFFFF;
+				vertical-align: top;
+				box-shadow: 0 0 4px #000000;
+			}
+			.tools {
+				margin: 4px;
+			}
+		</style>
 	</head>
-	<body>
-	<canvas id=cnv width=800 height=600 style="border: solid 1px;">HTML5 Canvas isn't supported</canvas>
+	<body background="res/bg.png">
+	<table id=table cellspacing=0 cellpadding=0>
+		<tr><td id=left>
+		<input class="tools" type="button" id="import" value="Import">
+		<input class="tools" type="button" id="export" value="Export">
+		<div class="tools"><div style="display:inline;" id="zoom">100%</div> <div style="display:inline;" id="position">{}</div><div>
+		</td><td id=canvas_container>
+		<canvas id=canvas>HTML5 Canvas isn't supported</canvas>
+		</td><td id=right>
+		</td></tr>
+	</table>
 	</body>
 </html>
