canvas class and mouse-related zoom

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<script type="text/javascript" src="tools/main.js"></script>
 		<script type="text/javascript" src="vector/main.js"></script>
+		<script type="text/javascript" src="src/canvas.js"></script>
 		<script type="text/javascript" src="src/main.js"></script>
 		<title>Vector Editor</title>
 		<style type="text/css">
