--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		
+		<script type="text/javascript" src="tools/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="tools/main.js"></script>
+
 		<script type="text/javascript" src="vector/main.js"></script>
+
 		<script type="text/javascript" src="src/canvas.js"></script>
 		<script type="text/javascript" src="src/main.js"></script>
+
 		<title>Vector Editor</title>
 		<style type="text/css">
 			body {
